force-app/main/default/objects/Flex_Rate__c/Flex_Rate__c.object-meta.xml
<CustomObject>
    <description>Wolves - for calculating the rate for partners that have a Flex Rate
MIS-4432</description>
    <label>Flex Rate</label>
    <nameField>
        <label>Flex Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flex Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>