force-app/main/default/objects/Flex_Rate__c/fields/Data_Rate__c.field-meta.xml
<CustomField>
    <fullName>Data_Rate__c</fullName>
    <label>Data Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>