force-app/main/default/objects/Flex_Rate__c/fields/Fix_Price__c.field-meta.xml
<CustomField>
    <fullName>Fix_Price__c</fullName>
    <label>Fix Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>