force-app/main/default/objects/Flex_Rate__c/fields/Max_DAU_Range__c.field-meta.xml
<CustomField>
    <fullName>Max_DAU_Range__c</fullName>
    <label>Max DAU Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>