force-app/main/default/objects/Flex_Rate__c/fields/Min_DAU_Range__c.field-meta.xml
<CustomField>
    <fullName>Min_DAU_Range__c</fullName>
    <label>Min DAU Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>