force-app/main/default/objects/Flex_Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Flex Rates</relationshipLabel>
    <relationshipName>Flex_Rates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>